fix swagger file
