# src/controllers/categoryController.ts
@@ -41,7 +41,7 @@ const deleteCategoryController = async (req: Request, res: Response, next: NextF
 
     if (!deletedCategory) {
       console.warn(`Category with ID ${id} not found.`);
-      res.status(404).json({ error: 'Category not found' });
+      res.status(404).json({ message: 'Category not found' });
     }
     res.status(200).json({ message: 'Category deleted successfully', deletedCategory, });
   } catch (err) {
